--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /blog/:year/:month/:day/:title
 
-exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md', 'bower.json', '.bowerrc', 'config.rb', 'sass', 's3_website*.yml', 'stage']]
+exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md', 'bower.json', '.bowerrc', 'config.rb', 'sass', 's3_website.yml', 'stage']
 highlighter: pygments
 
 # Themes are encouraged to use these universal variables
