--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: ruby
 rvm:
 - 2.0.0
 before_script:
+- chmod +x ./_scripts/init.sh
+- "./_scripts/init.sh"
 - bundle exec jekyll build
 - chmod +x ./_scripts/deploy.sh
 script:
