--- a/_stage/s3_website.yml
+++ b/_stage/s3_website.yml
@@ -13,9 +13,16 @@ concurrency_level: 5
 ## Cloud front CDN
 cloudfront_distribution_id: EA6L5NDE9L45G
 cloudfront_invalidate_root: true
+cloudfront_distribution_config:
+  default_cache_behavior:
+    min_TTL: <%= 60 * 60 * 24 %>
+  aliases:
+    quantity: 1
+    items:
+      CNAME: stage.devopx.com
+max_age: 120
 
 ## gzip active and file extensions
-gzip: true
 gzip:
   - .html
   - .css
@@ -23,10 +30,4 @@ gzip:
   - .js
 
 # Set browser caching.
-max_age:
-  "assets/*": 3600
-  "*": 300
-
-cache_control:
-  "assets/*": public, max-age=3600
-  "*": no-cache, no-store
+cache_control: public, no-transform, max-age=1200, s-maxage=1200
