[MOD] Reduce image sizes to improve speed, make images more responsive based on device screen width, animate message confirmation and translate it's message to Spanish

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     packages:
     - jpegoptim
     - optipng
+    - jpegtran
 before_script:
 - chmod +x ./_scripts/init.sh
 - "./_scripts/init.sh"
