--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     - jpegoptim
     - optipng
     - jpegtran
+    - s3cmd
 before_script:
 - chmod +x ./_scripts/init.sh
 - "./_scripts/init.sh"
