--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 - bundle exec jekyll build
 - chmod +x ./_scripts/deploy.sh
 script:
+- jdk_switcher use oraclejdk8
 - "./_scripts/deploy.sh"
 branches:
   only:
